styles.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: 'Archivo Black', sans-serif;
  scroll-behavior: smooth;
}

.navbar {
  background: white;
  height: 120px;
  display: flex;
  align-items: center;
  font-size: 1.2rem;
  position: sticky;
  top: 0;
  border-bottom: solid 2px black;
  z-index: 1000;
}

.navbar__container {
  display: flex;
  justify-content: space-between;
  height: 80px;
  z-index: 1;
  width: 100%;
  max-width: 100%;
  margin: 0 auto;
  padding: 0 50px;
}

.navbar__container #navbar-logo {
  position: fixed;
  z-index: 1000;
  left: 20px;
}

#navbar__logo .logo {
  cursor: pointer;
  max-width: 100%;
  max-height: 100%;
}

.navbar__menu {
  display: flex;
  align-items: center;
  list-style: none;
  max-width: 100%;
}

.navbar__item {
  height: 80px;
}

.navbar__links {
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 130px;
  text-decoration: none;
  height: 100%;
  transition: linear 0.125s;
}

.navbar__links:hover {
  font-size: 120%;
  transition: linear 0.125s;
}

.musicvideo__wrapper {
  max-height: auto;
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  margin: 0px 40px;
  align-content: space-around;
}

.musicvideo__container {
  margin: 10px;
}

.music__links {
  display: flex;
  justify-content: space-around;
  align-content: center;
  
}

.apple__logo {
  width: 110px;
  
  
}

.spotify__logo {
  margin-top: 28px;
  width: 60px;
}

.spotify__player {
  display: flex;
  justify-content: center;
  align-content: center;
  margin: 30px;
}

@media screen and (max-width: 960px) {
  .navbar__container {
    display: flex;
    justify-content: space-between;

    z-index: 10;
    max-width: 100%;
    padding: 0;
    margin: 0;
  }

  .navbar__menu {
    display: grid;
    grid-template-columns: 1fr;
    margin: 0;
    max-width: 100%;
    width: 100%;
    position: absolute;
    top: -1000px;
    z-index: -1;
    transition: all 1s;
  }


  .navbar__menu.mobile-view {
    background: white;
    top: 100%;
    transition: top 1s;
    height: 60vh;
    font-size: 1.6rem;
    width: 100%;
    border-bottom: solid 2px black;
  }

  #navbar__logo .logo {
    margin-left: 20px;
    z-index: 1000;
    max-width: 100%;
  }

  .navbar__toggle .bar {
    width: 25px;
    height: 3px;
    margin: 5px auto;
    transition: all 0.3s ease-in-out;
    background: black;
    z-index: 1000;
  }

  .navbar__item {
    display: flex;
    justify-content: center;
  }

  .navbar__links {
    padding: 2rem;
    width: 100%;
  }

  .navbar__links:hover {
    font-size: 120%;
    transition: linear 0.125s;
  }

  #mobile-menu {
    position: absolute;
    top: 30%;
    right: 7%;
    transform: translate(5%, 20%);
    cursor: pointer;
  }

  

  .navbar__toggle .bar {
    display: block;
  }

  #mobile-menu.is-active .bar:nth-child(2) {
    opacity: 0;
  }

  #mobile-menu.is-active .bar:nth-child(1) {
    transform: translateY(8px) rotate(45deg);
  }

  #mobile-menu.is-active .bar:nth-child(3) {
    transform: translateY(-8px) rotate(-45deg);
  }
}

@media screen and (max-width: 600px) {
  iframe {
    width: 400px;
    height: 300px;
  }
}

@media screen and (max-width: 430px) {
  iframe {
    width: 300px;
    height: 200px;
  }
}

